--- a/problema1.html
+++ b/problema1.html
@@ -3,12 +3,16 @@
 <head>
 	<title> Problema 1011. </title>
 	<meta charset = "utf-8">
+	<link rel = "stylesheet" type = "text/css" href = "CSS/problema1.css">
 </head>
 <body>
 	<h2> Problema 1011. </h2>
 	<h3> Esfera. </h3>
-	<p> Calcula el volumen de una esfera mediante el radio dado. </p>
-	<p> La formula para calcular dicho volumen es: (4/3) * Pi * r³ </p>
-	<script src = "JS/problema1.js"></script>
+	<section id = "cuadro">
+		<img src = "pic/esfera.gif">
+		<p> Calcula el volumen de una esfera mediante el radio dado. </p>
+		<p> La formula para calcular dicho volumen es: (4/3) * Pi * r³ </p>
+		<script src = "JS/problema1.js"></script>
+	</section>
 </body>
 </html>
