Problema 2 resulto y detalles mejorados

--- a/problema1.html
+++ b/problema1.html
@@ -9,7 +9,7 @@
 	<h2> Problema 1011. </h2>
 	<h3> Esfera. </h3>
 	<section id = "cuadro">
-		<img src = "pic/esfera.gif">
+		<img src = "pic/esfera.gif" id = "esfera">
 		<p> Calcula el volumen de una esfera mediante el radio dado. </p>
 		<p> La formula para calcular dicho volumen es: (4/3) * Pi * r³ </p>
 		<script src = "JS/problema1.js"></script>
