--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h1> Página principal. </h1>
 	<h4> Problemas 1011 y 1041. </h4>
 	<h6> Tarea 1.6 - Git con GitHub. </h6>
+	<img src = "pic/ola.WEBP">
 	<nav id = "opciones">
 		<a href = "problema1.html"> Problema 1011. </a>
 		<a href = "problema2.html"> Problema 1041. </a>
